VZDEV/src/objects/CCPM_SMSMessage__c.object
<CustomObject>
    <description>An custom SMS message to store the details of sms messages sent</description>
    <fields>
        <fullName>CCPM_BDParsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is BDParsed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_IsBDParsedConsumer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the Consumer has processed the template</description>
        <inlineHelpText>This field determines whether the Consumer has processed the template</inlineHelpText>
        <label>Is BDParsed Consumer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_LiveTextNumber__c</fullName>
        <description>Stores the Live Text Number Used.</description>
        <inlineHelpText>Stores the Live Text Number Used.</inlineHelpText>
        <label>Live Text Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_MessageStatus__c</fullName>
        <description>Refers to the status of the Message sent based on response code.</description>
        <inlineHelpText>Refers to the status of the Message sent based on response code.</inlineHelpText>
        <label>Message Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Resend Failed</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_SMSFailCounter__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Counter that holds the number of times the SMS failed to be sent.</description>
        <label>SMS Fail Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_ScheduleDateTime__c</fullName>
        <description>Refers to the Date/Time the SMS is to be sent.</description>
        <inlineHelpText>Refers to the Date/Time the SMS is to be sent.</inlineHelpText>
        <label>Schedule Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_addedToQueuePostGres__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is an indication of whether a record has been added to the Queue in Heroku.</description>
        <inlineHelpText>This field is an indication of whether a record has been added to the Queue in Heroku.</inlineHelpText>
        <label>Added To Queue PostGres</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_addedtoqueueDateTime__c</fullName>
        <description>This field stores the date/time when the SMS is added to the queue in Heroku</description>
        <inlineHelpText>This field stores the date/time when the SMS is added to the queue in Heroku</inlineHelpText>
        <label>Addded to queue Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_communicationDirection__c</fullName>
        <description>Refers tot the communication Direction.</description>
        <inlineHelpText>Refers tot the communication Direction.</inlineHelpText>
        <label>Communication Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_dynamicDate__c</fullName>
        <description>Stores the dynamic date value to be entered into the SMS Message</description>
        <inlineHelpText>Stores the dynamic date value to be entered into the SMS Message</inlineHelpText>
        <label>Dynamic Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dynamicECODE__c</fullName>
        <label>Dynamic ECODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dynamicLeadOwnerName__c</fullName>
        <label>Dynamic Lead Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dynamicStoreName__c</fullName>
        <label>Dynamic Store Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dynamicStoreRecommendedHrs__c</fullName>
        <label>Dynamic Store Recommended Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dynamicURL__c</fullName>
        <description>field to populate URL to send messages to IphoneX</description>
        <inlineHelpText>field to populate URL to send messages to IphoneX</inlineHelpText>
        <label>Dynamic URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CCPM_formattedSMSBody__c</fullName>
        <description>Formats the body of SMS, by replacing SPACE with PLUS (+) sign</description>
        <formula>&apos;Hi&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted SMS Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_formattedtoPhone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( CCPM_toPhoneNumber__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <label>Formatted To Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_internalCommunication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refers whether the communication is within Verizon network.</description>
        <inlineHelpText>Refers whether the communication is within Verizon network.</inlineHelpText>
        <label>Internal Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_journeyMessage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journey Message</label>
        <referenceTo>CCPM_journeyMessage__c</referenceTo>
        <relationshipLabel>SMS Messages</relationshipLabel>
        <relationshipName>CCPM_SMSMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_leadRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the associated lead.</description>
        <inlineHelpText>Refers to the associated lead.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SMS Messages</relationshipLabel>
        <relationshipName>SMS_Message_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_leadType__c</fullName>
        <description>Lead type from lead record</description>
        <formula>TEXT(CCPM_leadRecord__r.CCPM_leadType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_messageType__c</fullName>
        <description>Indicates the type of SMS being sent.</description>
        <inlineHelpText>Indicates the type of SMS being sent.</inlineHelpText>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_message__c</fullName>
        <description>Message body to be sent.</description>
        <inlineHelpText>Message body to be sent.</inlineHelpText>
        <label>Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_priority__c</fullName>
        <label>priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>As Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_referenceId__c</fullName>
        <description>Reference ID for each of the SMS sent.</description>
        <inlineHelpText>Reference ID for each of the SMS sent.</inlineHelpText>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_removedByLocationSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed By Location Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_requestID__c</fullName>
        <label>RequestID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_responseCode__c</fullName>
        <description>Response codes recorded for each API call made</description>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_responseMessage__c</fullName>
        <description>Captures the Response Message for the Heywire API callout made.</description>
        <inlineHelpText>Captures the Response Message for the Heywire API callout made.</inlineHelpText>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_sentTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provides the User to whom the SMS is sent(If user is internal Verizon User).</description>
        <inlineHelpText>Provides the User to whom the SMS is sent(If user is internal Verizon User).</inlineHelpText>
        <label>Sent To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCPM_SMSMessagesSentTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_smsTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>CCPM_smsTemplate__c</referenceTo>
        <relationshipLabel>SMS Messages</relationshipLabel>
        <relationshipName>CCPM_smsMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_smssentactualtime__c</fullName>
        <description>This field stores the time the SMS was actually sent out from Heroku</description>
        <inlineHelpText>This field stores the time the SMS was actually sent out from Heroku</inlineHelpText>
        <label>SMS Sent Actual Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_toPhoneNumber__c</fullName>
        <description>Refers to the number the SMS should be sent.</description>
        <inlineHelpText>Refers to the number the SMS should be sent.</inlineHelpText>
        <label>To Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccpm_smstimezone__c</fullName>
        <formula>if(TEXT(CCPM_leadRecord__r.Store__r.CCPM_TimeZone__c)!=null,TEXT(CCPM_leadRecord__r.Store__r.CCPM_TimeZone__c),&apos;EST&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS TimeZone</label>
        <type>Text</type>
    </fields>
    <label>SMS Message</label>
    <listViews>
        <fullName>CCPM_allFailedSMSMessages</fullName>
        <columns>NAME</columns>
        <columns>CCPM_LiveTextNumber__c</columns>
        <columns>CCPM_toPhoneNumber__c</columns>
        <columns>CCPM_leadRecord__c</columns>
        <columns>CCPM_message__c</columns>
        <columns>CCPM_messageType__c</columns>
        <columns>CCPM_communicationDirection__c</columns>
        <columns>CCPM_MessageStatus__c</columns>
        <columns>CCPM_responseCode__c</columns>
        <columns>CCPM_ScheduleDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_MessageStatus__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>04. All Failed SMS Messages</label>
    </listViews>
    <listViews>
        <fullName>CCPM_allRemovedSMSMessages</fullName>
        <columns>NAME</columns>
        <columns>CCPM_LiveTextNumber__c</columns>
        <columns>CCPM_toPhoneNumber__c</columns>
        <columns>CCPM_leadRecord__c</columns>
        <columns>CCPM_message__c</columns>
        <columns>CCPM_messageType__c</columns>
        <columns>CCPM_communicationDirection__c</columns>
        <columns>CCPM_MessageStatus__c</columns>
        <columns>CCPM_responseCode__c</columns>
        <columns>CCPM_ScheduleDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_MessageStatus__c</field>
            <operation>equals</operation>
            <value>Removed</value>
        </filters>
        <label>05. All Removed SMS Messages</label>
    </listViews>
    <listViews>
        <fullName>CCPM_allSendSMSMessages</fullName>
        <columns>NAME</columns>
        <columns>CCPM_LiveTextNumber__c</columns>
        <columns>CCPM_toPhoneNumber__c</columns>
        <columns>CCPM_leadRecord__c</columns>
        <columns>CCPM_message__c</columns>
        <columns>CCPM_messageType__c</columns>
        <columns>CCPM_communicationDirection__c</columns>
        <columns>CCPM_MessageStatus__c</columns>
        <columns>CCPM_responseCode__c</columns>
        <columns>CCPM_ScheduleDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_MessageStatus__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>03. All Sent SMS Messages</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{000000000}</displayFormat>
        <label>SMS Message #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>